canned responses added

--- a/customerHome.html
+++ b/customerHome.html
@@ -211,6 +211,11 @@
             </div>
             <div class="col-md-3">
               <div class="form-group">
+                <i class="fa fa-info-circle"></i> &nbsp; <label>Icon Colour</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.iconColor">
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="form-group">
                 <div class="row">
                   <div class="col-md-5">
                     <i class="fa fa-user"></i> &nbsp; <label>Name</label>
