--- a/homepage/static/ngTemplates/app.customer.settings.html
+++ b/homepage/static/ngTemplates/app.customer.settings.html
@@ -17,6 +17,14 @@
   </div>
   <div class="row" style="padding-bottom:10px;">
     <div class="col-md-4" style="font-size:20px;">
+      <span ><i class="fa fa-info-circle"></i> &nbsp;<span>Icon Colour</span> &nbsp;</span>
+    </div>
+    <div class="col-md-8">
+        <input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.iconColor">
+    </div>
+  </div>
+  <div class="row" style="padding-bottom:10px;">
+    <div class="col-md-4" style="font-size:20px;">
       <span ><i class="fa  fa-picture-o"></i> &nbsp;<span>Picture</span></span>
     </div>
     <div class="col-md-8">
