--- a/support/static/ngTemplates/app.customers.document.html
+++ b/support/static/ngTemplates/app.customers.document.html
@@ -25,9 +25,9 @@
           <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
             <div class="text-center" style="font-size:20px;padding:10px"><b>{{doc.title}}</b></div>
             <ul style="list-style:none;margin-bottom:-10px;font-size:12px" class="list-inline">
-              <li>Last modified:<b> 7:27</b></li>
-              <li>Process:<b> abc</b></li>
-              <li>Versions:<b> 4</b></li>
+              <li>Last modified:<b> {{doc.updated  | date:'dd-MMM-yyyy'}}</b></li>
+              <li ng-if="doc.process.text">Process:<b> {{doc.process.text}}</b></li>
+              <li>Versions:<b> {{doc.version_count}}</b></li>
             </ul>
           </div>
           <!-- <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
@@ -62,14 +62,15 @@
                 <uib-tab-heading>
                   Article
                 </uib-tab-heading>
-                <div >
-                  <input type="text" class="form-control"  ng-model="selected_process" uib-typeahead="process as process.text for process in processSearch($viewValue)"/
-                  <p style="color:red;margin:15px 0px">Article owner</p>
-                  <select class="form-control" id="" style="margin:5px 0px">
-                    <option>Syrow</option>
-                    <option>erp</option>
-                    <option>random</option>
-                  </select>
+                <div>
+                  <div class="row">
+                    <label>Process:</label>
+                    <input type="text" class="form-control"  ng-model="docForm.process" uib-typeahead="process as process.text for process in processSearch($viewValue)"/>
+                  </div>
+                  <div class="row">
+                    <label>Article Owner</label>
+                    <input type="text" class="form-control"  ng-model="docForm.articleOwner" uib-typeahead="user as user.username for user in userSearch($viewValue)"/>
+                  </div>
                   <!-- <p style="color:red;margin:20px 0px;">Display permission</p>
                       <ul class="list-inline versions"  style="font-size:15px" ng-init="type='agents'">
                         <li  style="padding:0px"><button style="padding:8px;border-radius:10px" class="{{type=='agents' ? 'active' : ''}}" ng-click="type='agents'">Agents</button></li>
