--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -105,6 +105,9 @@
         <i class="fa fa-gg-circle"></i> &nbsp; <label>SupportBubble Colour</label> &nbsp;<input type="color" ng-model="cpForm.supportBubbleColor">
       </div>
       <div class="form-group">
+        <i class="fa fa-info-circle"></i> &nbsp; <label>Icon Colour</label> &nbsp;<input type="color" ng-model="cpForm.iconColor">
+      </div>
+      <div class="form-group">
         <div class="row">
           <div class="col-md-2">
             <i class="fa fa-user"></i> &nbsp; <label>Name</label>
