--- a/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
@@ -25,13 +25,13 @@
         <div class="col-md-6 col-xs-6" >
           <div class="form-group">
             <label>City : </label>
-            <input ng-model="form.city" type="text" class="form-control" placeholder="City...">
+            <input ng-model="form.city" type="text" class="form-control" placeholder="City..." disabled>
           </div>
         </div>
         <div class="col-md-6 col-xs-6">
           <div class="form-group">
             <label>State : </label>
-            <input ng-model="form.state" type="text" class="form-control" placeholder="State...">
+            <input ng-model="form.state" type="text" class="form-control" placeholder="State..." disabled>
           </div>
         </div>
       </div>
