--- a/support/static/ngTemplates/app.customer.version.modal.html
+++ b/support/static/ngTemplates/app.customer.version.modal.html
@@ -1,9 +1,9 @@
 <div class="modal-header">
   <h4 class="text-center">{{version.title}}</h4>
 </div>
-<div class="modal-body">
+<div class="modal-body" style="margin:15px;">
   <div class="row">
-    <div ng-bind-html="text">
+    <div ng-bind-html="version.text">
     </div>
   </div>
 </div>
